# aterms

aterm/: 64-bit-fixes.differences  Makefile.am  NOTES.txt  aterm_config.h  aterm_config.h.in  configure.ac  stamp-h1
aterm/aterm/: Makefile.am  _afun.h  _aterm.h  afun.c  afun.h  aterm.c  atypes.h  bafio.c  byteencoding.c  byteio.c  byteio.h  encoding.h  gc.c  hash.c  libATerm_la-afun.lo  list.c  make.c  memmgnt.c  memory.c  memory.h  safio.c  safio.h  tafio.c  util.h
aterm/aterm/.deps/: libATerm_la-afun.Plo  libATerm_la-aterm.Plo  libATerm_la-bafio.Plo  libATerm_la-byteencoding.Plo  libATerm_la-byteio.Plo  libATerm_la-gc.Plo  libATerm_la-hash.Plo  libATerm_la-idmappings.Plo  libATerm_la-list.Plo  libATerm_la-make.Plo  libATerm_la-md5c.Plo  libATerm_la-memmgnt.Plo  libATerm_la-memory.Plo  libATerm_la-safio.Plo  libATerm_la-tafio.Plo  libATerm_la-version.Plo
aterm/test/: Fortran.tbl.trm  Makefile.am  fib.c  primes.c  randgen.c  stress.c  test.baf  test_bafio.c  test_lists.c  test_memory.c
aterm/test/.deps/: fib.Po  primes.Po  randgen.Po  stress-stress.Po  stress-terms.Po  termstats.Po  test_bafio.Po  test_lists.Po  test_memory-test_memory.Po  testsafio.Po
aterm/utils/: Makefile.am
aterm/utils/.deps/: atdiff.Po  atreverse.Po  atrmannos.Po  atsum.Po  baffle.Po  dicttoc.Po  termsize.Po
